# ViolationSentinel

./: .env.example  .gitignore  CHANGELOG.md  DEPLOY.md  DEPLOYMENT.md  Dockerfile  ENTERPRISE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PRODUCTION_HARDENING.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_V1.md  SECURITY.md  admin_tools.py  alembic.ini  demo_ai_predictor.py  demo_dashboard_websocket.py  docker-compose-v1.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  example_cache_usage.py  example_logging_integration.py  example_nyc_data_client.py  example_websocket_usage.py  fetch_final.py  git_push.sh  landing_page.html  landlord_dashboard.py  pyproject.toml  pytest.ini  quickstart_v1.sh  requirements-v1.txt  requirements.txt  setup.cfg  setup.py  (+12 more)
ai/: __init__.py  feature_engineering.py  model_monitor.py  risk_predictor.py
alembic/: env.py
api/: README.md  __init__.py  nyc_data_client.py
backend/: Dockerfile  __init__.py  config.py  database.py  logging_config.py  requirements.txt
cron/: daily_pipeline.py
data/: nyc_compliance_demo_20260114_0336.csv
docs/: AI_RISK_PREDICTOR.md  ARCHITECTURE.md  COMPETITIVE_MOAT.md  DASHBOARD_WEBSOCKET.md  DEPLOYMENT.md  FEATURE_ENGINEERING.md  MODEL_TRAINING.md  MONETIZATION_README.md  NYC_DATA_CLIENT.md  README_ENTERPRISE.md  SECURITY_ADVISORY_2024_01.md  exit_strategy.md  investor_pitch_deck.md  outreach_templates.md  patent_applications.md  sales_demo_script.md  technical_white_paper.md
infrastructure/: README.md  __init__.py  cache.py  circuit_breaker.py  logging_config.py  rate_limiter.py
monitoring/: README.md  __init__.py  prometheus.yml  websocket_server.py
risk_engine/: __init__.py  inspector_patterns.py  peer_benchmark.py  pre1974_multiplier.py  seasonal_heat_model.py
sales/: outreach_pdf.py
scripts/: init_db.sh  start_api.sh  train_models.py  verify_setup.sh
streamlit/: app.py  export_utils.py
(+103 files in other folders)
