[metadata]
name = violationsentinel
version = 0.1.0
author = ViolationSentinel Team
description = NYC property violation monitoring and risk assessment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NickAiNYC/ViolationSentinel
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Financial and Insurance Industry
    Topic :: Office/Business :: Financial :: Investment
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    pandas>=2.0.0
    requests>=2.31.0
    python-dotenv>=1.0.0
    fastapi>=0.104.0
    uvicorn>=0.24.0
    streamlit>=1.32.0
    plotly>=5.22.0
    pytest>=7.4.0

[options.packages.find]
where = src
